SERVER-17532: fix dup key error message in wiredtiger index