src/mongo/db/storage/wiredtiger/wiredtiger_index.cpp
@@ -95,14 +95,6 @@ namespace {
         return bb.obj();
     }
 
-    // taken from btree_logic.cpp
-    Status dupKeyError(const BSONObj& key) {
-        StringBuilder sb;
-        sb << "E11000 duplicate key error ";
-        sb << "dup key: " << key;
-        return Status(ErrorCodes::DuplicateKey, sb.str());
-    }
-
     Status checkKeySize(const BSONObj& key) {
         if ( key.objsize() >= TempKeyMaxSize ) {
             string msg = mongoutils::str::stream()
@@ -114,6 +106,15 @@ namespace {
     }
 
 } // namespace
+
+    Status WiredTigerIndex::dupKeyError(const BSONObj& key) {
+        StringBuilder sb;
+        sb << "E11000 duplicate key error";
+        sb << " collection: " << _collectionNamespace;
+        sb << " index: " << _indexName;
+        sb << " dup key: " << key;
+        return Status(ErrorCodes::DuplicateKey, sb.str());
+    }
 
     // static
     StatusWith<std::string> WiredTigerIndex::parseIndexOptions(const BSONObj& options) {
@@ -204,7 +205,9 @@ namespace {
                                      const IndexDescriptor* desc)
         : _ordering(Ordering::make(desc->keyPattern())),
           _uri( uri ),
-          _instanceId( WiredTigerSession::genCursorId() ) {
+          _instanceId( WiredTigerSession::genCursorId() ),
+          _collectionNamespace( desc->parentNS() ),
+          _indexName( desc->indexName() ){
 
         Status versionStatus =
             WiredTigerUtil::checkApplicationMetadataFormatVersion(ctx,
@@ -531,7 +534,7 @@ namespace {
             else {
                 // Dup found!
                 if (!_dupsAllowed) {
-                    return dupKeyError(newKey);
+                    return _idx->dupKeyError(newKey);
                 }
 
                 // If we get here, we are in the weird mode where dups are allowed on a unique
